# skyherd-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.hardware-demo.yml  docker-compose.sitl.yml  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  scenario_proposal.md
.github/workflows/: android-app.yml  ci.yml  collar-firmware.yml  fresh-clone-smoke.yml  ios-app.yml  lighthouse.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RESUME.md  ROADMAP.md  STATE.md  VERIFY-ALL.md  config.json  deferred-features.md  managed-mesh-smoke-result.md  twilio-checkpoint.md  v1.0-MILESTONE-AUDIT.md  v1.1-partA-SUMMARY.md  v1.1-partB-SUMMARY.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/research/: competitor-scores.md  final-A-score.md  final-B-score.md  final-C-score.md  final-comparison.md  iter-1-B-score.md  iter-1-C-score.md  iter-2-B-score.md  iter-2-C-score.md  iter-3-A-score.md  iter-3-B-score.md  iter-3-C-score.md  iter-4-A-score.md  iter-5-A-score.md  iter-6-A-score.md  iter-7-A-score.md  iter1-comparison.md  iter1-video-links.md  linkedin-launch-post.md  loop-status.md  openmontage-integration-design.md  v5-chatterbox-durations.txt  v5-fix-suggestions.md  v5-vo-durations.txt  winner-top3-analysis.md  youtube-upload-pending.md
android/SkyHerdCompanion/: Makefile  build.gradle.kts  settings.gradle.kts
docker/: hardware-demo-edge.Dockerfile  sitl-entrypoint.sh  sitl.Dockerfile
docs/: A1_PROBE_RESULT.md  ARCHITECTURE.md  ARCHITECT_REVIEW.md  ATTESTATION.md  ATTESTATION_ROTATION.md  CLAUDE_CONTEXT.md  CLAUDE_DESIGN.md  CODEMAP.md  CODE_REVIEW.md  CODE_REVIEW_TODO.md  COST_BREAKDOWN.md  CROSS_RANCH_MESH.md  DEMO_VIDEO_AUTOMATION.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  FINAL_STATE.md  H3_DJI_AUDIT.md  HACKATHON.md  HARDWARE_COLLAR.md  HARDWARE_DEMO_RUNBOOK.md  HARDWARE_F3_BETAFLIGHT.md  HARDWARE_F3_INAV.md  HARDWARE_GALILEO.md  HARDWARE_H1_RUNBOOK.md  HARDWARE_H2_RUNBOOK.md  HARDWARE_H3_RUNBOOK.md  HARDWARE_H4_RUNBOOK.md  HARDWARE_MAVIC_ANDROID.md  HARDWARE_MAVIC_IOS.md  HARDWARE_MAVIC_PROTOCOL.md  HARDWARE_PI_EDGE.md  HARDWARE_PI_FLEET.md  LAPTOP_DRONE_CONTROL.md  LINKEDIN_LAUNCH.md  MANAGED_AGENTS.md  MANAGED_AGENTS_LIVE.md  MANAGED_AGENTS_MIGRATION.md  MAVIC_MISSION_SCHEMA.md  ONE_PAGER.md  (+17 more)
docs/demo-assets/: captions.json  shot-list.md
docs/edl/: openmontage-cuts-A-cinematic.json  openmontage-cuts-A-screen-demo.json  openmontage-cuts-B-cinematic.json  openmontage-cuts-B-screen-demo.json  openmontage-cuts-C-cinematic.json  openmontage-cuts-C-screen-demo.json  remotion-props-A-cinematic.json  remotion-props-A-screen-demo.json  remotion-props-B-cinematic.json  remotion-props-B-screen-demo.json  remotion-props-C-cinematic.json  remotion-props-C-screen-demo.json
docs/plans/: 2026-04-25-ios-backend-map.md  2026-04-25-skyherd-rancher-ios-design.md
docs/screenshots/: vis-05-README.md
docs/scripts/: skyherd-script-A-winner-pattern.md  skyherd-script-B-hybrid.md  skyherd-script-C-differentiated.md
hardware/cardboard_coyote/: __init__.py  coyote_harness.py
hardware/collar/: BOM.md  Makefile  README.md  flash.sh  wiring.ascii  wiring.md
hardware/galileo/: README.md  bootstrap.sh  credentials.example.json  sensor_publisher.py  skyherd-galileo.service
hardware/pi/: README.md  bootstrap.sh  credentials.example.json
ios/SkyHerdCompanion/: Makefile  README.md  bootstrap.sh  project.yml
ios/SkyHerdRancher/: README.md  project.yml
remotion-video/: package.json  pnpm-lock.yaml
remotion-video/public/: BGM-SOURCE.md
remotion-video/src/: Main.tsx  Root.tsx  index.css
runtime/: drone_events.jsonl  drone_events_f3.jsonl  drone_events_mavic.jsonl  phone_rings.jsonl  sse_events.jsonl
runtime/collars/: registry.example.json
runtime/scenario_runs/: calving_42_20260422T041538.jsonl  calving_42_20260422T041539.jsonl  calving_42_20260422T041548.jsonl  calving_42_20260422T041551.jsonl  calving_42_20260422T041558.jsonl  calving_42_20260422T041602.jsonl  calving_42_20260422T041606.jsonl  calving_42_20260422T041610.jsonl  calving_42_20260422T041615.jsonl  calving_42_20260422T041618.jsonl  calving_42_20260422T041807.jsonl  calving_42_20260422T041812.jsonl  calving_42_20260422T041816.jsonl  calving_42_20260422T041820.jsonl  calving_42_20260422T041825.jsonl  calving_42_20260422T041841.jsonl  calving_42_20260422T041859.jsonl  calving_42_20260422T041900.jsonl  calving_42_20260422T041918.jsonl  calving_42_20260422T041929.jsonl  calving_42_20260422T041936.jsonl  calving_42_20260422T041945.jsonl  (+4230 more)
scripts/: a1_probe.py  aggregate_score.py  auto_apply_fix.py  build-replay.py  capture_web_replay.py  cloudflared-setup.sh  fetch_broll.sh  fresh_clone_smoke.sh  gate_check.py  generate_kinetic_captions.py  generate_lottie_primitives.py  license_sweep.sh  managed_mesh_smoke_live.py  openmontage_to_remotion.py  pick_winner.py  provision-edge.sh  qc_compile_issues.py  qc_video_per_second.py  record_dashboard.py  regen_captions.py  rehearsal-loop.sh  render_pdf.py  render_vo.sh  render_vo_phase1.sh  score_competitor.sh  score_stills_opus.py  setup-edge-galileo.sh  setup-edge-pi.sh  sitl_smoke.py  source_bgm.sh  train_pinkeye_classifier.py  upload_youtube.sh  verify_ducking.sh  video_iterate.sh  vo_cues.sh  vo_voices.json
skills/: README.md
tests/: test_broll_layer_licensing.py  test_broll_track.py  test_determinism_e2e.py  test_gate_check.py  test_kinetic_captions_pipeline.py  test_licenses.py  test_lottie_layer_licensing.py  test_main_composition_variants.py  test_makefile_record_targets.py  test_openmontage_edl_ingest.py  test_readme_quickstart.py  test_smoke.py  test_styled_captions_pipeline.py  test_vo_filenames_no_wes.py
web/: index.html  lighthouserc.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
worlds/: ranch_a.yaml  ranch_b.yaml
(+1226 files in other folders)
