[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyherd-engine"
version = "0.1.0"
description = "The operating system for remote land assets — a 5-layer nervous system for American ranches."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "George Teifel" }]

dependencies = [
    # Anthropic
    "anthropic>=0.69",
    "claude-agent-sdk",
    # MQTT
    "aiomqtt>=2",
    "amqtt",
    # Drone
    "mavsdk>=3",
    "pymavlink",
    # Web / API
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "httpx",
    # Data / config
    "pydantic>=2",
    "pyyaml",
    "cryptography",
    # Vision
    "pillow",
    "numpy",
    "supervision",
    # DX
    "python-dotenv",
    "rich",
    "typer",
    "twilio>=9.10.5",
]

[project.optional-dependencies]
voice = [
    "elevenlabs>=1.9",
    "twilio>=9.10.5",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "ruff",
    "pyright",
    "pre-commit",
    "mypy",
]

[project.scripts]
skyherd-attest = "skyherd.attest.cli:main"
skyherd-mesh = "skyherd.agents.cli:main"
skyherd-demo = "skyherd.scenarios.cli:main"
skyherd-voice = "skyherd.voice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skyherd"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/skyherd"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = [
    "E501",  # line-length — handled separately for docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B017", "B905", "E741", "F841", "N806", "UP017"]  # test-file leniency
# typer.Option in defaults is the standard typer CLI pattern
"src/skyherd/attest/cli.py" = ["B008", "B904"]
"src/skyherd/agents/cli.py" = ["B008", "B904"]
"src/skyherd/voice/cli.py" = ["B008", "B904"]
# DroneUnavailable name is a stable public API — renaming would be a breaking change
"src/skyherd/drone/interface.py" = ["N818"]
# mavsdk is imported lazily at runtime; type annotation uses string forward ref
"src/skyherd/drone/sitl.py" = ["F821", "F841"]
# world module — forward-ref string annotations and legacy enum patterns are intentional
"src/skyherd/world/*.py" = ["UP042", "UP017", "F841", "E741"]
