[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyherd-engine"
version = "0.1.0"
description = "The operating system for remote land assets — a 5-layer nervous system for American ranches."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "George Teifel" }]

dependencies = [
    # Anthropic
    "anthropic>=0.69,<1",
    "claude-agent-sdk",
    # MQTT
    "aiomqtt>=2,<3",
    "amqtt",
    # Drone
    "mavsdk>=3,<4",
    "pymavlink",
    # Web / API
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sse-starlette>=2,<3",
    "httpx>=0.27,<1",
    # Data / config
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "cryptography>=42,<45",
    # Vision
    "pillow>=10,<12",
    "numpy>=1.26,<3",
    "supervision>=0.20,<1",
    "torch>=2.4,<3",
    "torchvision>=0.19,<1",
    # DX
    "python-dotenv>=1,<2",
    "rich>=13,<14",
    "typer>=0.12,<1",
    "twilio>=9.10.5,<10",
    "opencv-python-headless>=4.13.0.92",
    "auto-editor>=29.3.1",
    "faster-whisper>=1.2.1",
]

[project.optional-dependencies]
voice = [
    "elevenlabs>=1.9",
    "twilio>=9.10.5,<10",
]
drone-hw = [
    # USB-serial motor control via MSP v1 (BetaflightOverrideBackend).
    # Not required for laptop-only installs — install with:
    #   uv sync --extra drone-hw
    "pyserial>=3.5,<4",
]
docs = [
    "weasyprint>=62",
    "markdown>=3.6",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "ruff",
    "pyright",
    "pre-commit",
    "mypy",
    # obs extras available in dev for testing
    "structlog>=24,<26",
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.24,<2",
]
edge = [
    # picamera2 is installed via apt on Pi OS: sudo apt install python3-picamera2
    # Not listed here — requires libcap dev headers unavailable in CI wheel builds.
    "PytorchWildlife",
]
obs = [
    # Observability extras — loaded when SKYHERD_OBS=1 or imported directly.
    # Install with: uv sync --extra obs
    "structlog>=24,<26",
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.24,<2",
]

[project.scripts]
skyherd-attest = "skyherd.attest.cli:main"
skyherd-verify = "skyherd.attest.verify_cli:main"
skyherd-mesh = "skyherd.agents.cli:main"
skyherd-demo = "skyherd.scenarios.cli:main"
skyherd-voice = "skyherd.voice.cli:main"
skyherd-demo-hw = "skyherd.demo.cli:main"
skyherd-edge = "skyherd.edge.cli:main"
skyherd-sitl-e2e = "skyherd.drone.e2e:app"
skyherd-server-live = "skyherd.server.live:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skyherd"]
exclude = ["src/skyherd/worlds"]

[tool.hatch.build.targets.wheel.force-include]
"worlds" = "skyherd/worlds"

[tool.hatch.build.targets.sdist]
include = [
    "src/**",
    "worlds/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "Makefile",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests that spawn subprocesses (deselect with '-m \"not integration\"')",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/skyherd"]
omit = [
    "tests/*",
    # Dev-time scripts — not run in CI or at runtime
    "scripts/*",
    # Hardware-only backends — require physical drone/SITL to exercise
    "src/skyherd/drone/pymavlink_backend.py",
    "src/skyherd/drone/sitl.py",
    "src/skyherd/drone/sitl_emulator.py",
    # Hardware-only demo — requires physical sensors + full ranch setup
    "src/skyherd/demo/hardware_only.py",
    # CLI entry-points tested separately via subprocess; typer CLIs need tty
    "src/skyherd/agents/cli.py",
    # live.py runs uvicorn in-process — tested via TestClient in test_live_app.py
    # but the uvicorn.run() call itself requires a real server process
    "src/skyherd/server/live.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".refs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = [
    "E501",  # line-length — handled separately for docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B017", "B905", "E741", "F841", "N806", "UP017"]  # test-file leniency
# typer.Option in defaults is the standard typer CLI pattern
"src/skyherd/attest/cli.py" = ["B008", "B904"]
"src/skyherd/agents/cli.py" = ["B008", "B904"]
"src/skyherd/voice/cli.py" = ["B008", "B904"]
"src/skyherd/edge/cli.py" = ["B008", "B904"]
# DroneUnavailable / GeofenceViolation / BatteryTooLow / WindTooHigh / PiCameraUnavailable
# are stable public APIs — renaming would be a breaking change across tests and callers
"src/skyherd/drone/interface.py" = ["N818"]
# ManagedAgentsUnavailable is a stable public sentinel — keeping the existing name
"src/skyherd/agents/managed.py" = ["N818"]
"src/skyherd/drone/safety.py" = ["N818"]
"src/skyherd/edge/camera.py" = ["N818"]
# mavsdk is imported lazily at runtime; type annotation uses string forward ref
"src/skyherd/drone/sitl.py" = ["F821", "F841"]
# world module — forward-ref string annotations and legacy enum patterns are intentional
"src/skyherd/world/*.py" = ["UP042", "UP017", "F841", "E741"]
